Enhance SEO with additional meta tags
Added meta tags for description, keywords, author, and robots.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
   <meta charset="UTF-8">
   <title>José Antonio Peláez Ochoa | Pintor Español Contemporáneo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Explora la galería oficial de Pelaez Ochoa: cuadros originales al óleo, grabados artísticos, pintura contemporánea y obra tradicional única. Descubre exposiciones, colecciones y obras firmadas de un pintor español.">
+  <meta name="keywords" content="Pelaez Ochoa, Pelaez Ochoa pintor, Pelaez Ochoa artista, galería Pelaez Ochoa, galería de arte, galería de pintura, galería artística, arte, arte real, arte tradicional, pintura, pintura al óleo, cuadros al óleo, óleo sobre lienzo, pintura acrílica, acuarela, grabado, grabados artísticos, obra gráfica, obra original, arte pictórico, arte contemporáneo, arte moderno, arte clásico, bellas artes, pintura figurativa, pintura abstracta, pintura expresionista, pintura realista, pintura contemporánea, pintura moderna, pintura española, pintor español, artista español, arte en España, galería de arte en España, cuadros originales, cuadros únicos, colección de cuadros, colección de pintura, exposición de pintura, exposición artística, obras de arte originales, compra de cuadros, venta de cuadros, cuadros para coleccionistas, arte para coleccionistas, inversión en arte, patrimonio artístico, cultura artística, museo, exhibición de arte, portafolio artístico, portfolio artístico, portfolio de pintura, catálogo de obras, catálogo artístico, estudio de pintura, taller de artista, obra pictórica, técnica mixta, técnicas pictóricas, litografía, serigrafía, grabado en metal, grabado calcográfico, grabado tradicional, estampación artística, obra gráfica original, edición limitada, arte europeo, arte ibérico, artista contemporáneo español, pintura europea, pintura de autor, firma artística, obra firmada, cuadros de autor, arte exclusivo, arte original, arte de colección, mercado del arte, crítica de arte, historia del arte, pintura de galería, galería de pintores, galería de artistas españoles, exposiciones de arte en España, arte cultural, patrimonio cultural, creatividad artística, obra plástica">
+  <meta name="author" content="Pelaez Ochoa">
+  <meta name="robots" content="index, follow">
+<link rel="canonical" href="https://pelaezochoa.com/">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QJ0CYYB3CF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-QJ0CYYB3CF');
+</script>
   <style>
     html, body {
       margin: 0;
